22 January 2026: Wouter
	- Fix that fast reload copies the iter_scrub_ns, iter_scrub_cname
	  and max_global_quota options.
	- Fix http test tool petal to not print errors when there is no
	  error.

21 January 2026: Wouter
	- Merge #1388: QNX Porting support for unbound.

19 January 2026: Wouter
	- Merge #1392: Include "V" (version) option in synopsis.

15 January 2026: Wouter
	- Fix documentation for requestlist.overwritten and
	  requestlist.exceeded, it explains which query was dropped.

8 January 2026: Wouter
	- Merge #1381: Do not initialize quic_table unless it is enabled.

6 January 2026: Wouter
	- Fix edns subnet, that scope zero queries, when there is a
	  subquery without subnet, and the forward-no-cache or
	  stub-no-cache option is set, it is not stored in cache due to
	  the forward or stub option.

6 January 2026: Yorgos
	- Merge #1391 from Götz Görisch: Fix documentation to adhere to
	  RFC5952.

31 December 2025: Yorgos
	- Update the unbound-anchor man page to note write permissions of the
	  generated file if it is to be used with Unbound's
	  auto-trust-anchor-file option.
	- Use the same EDE removal logic when encoding errors as when encoding
	  replies.

30 December 2025: Yorgos
	- Mark "THROWAWAY" and "(DNSSEC) LAME" responses clearly as Unbound's
	  categorization in the log output.

24 December 2025: Yorgos
	- More specific wording in the unbound.conf man page for stub-first
	  and forward-first options.

3 December 2025: Wouter
	- Fix http2 drop handling to clear the postpone_drop state so that
	  other streams on the http2 session are not affected by a drop,
	  and can clean up properly if also dropped. Fix http2 send reply
	  so that when there is a send failure is does not recurse into
	  the mesh functions and also does not drop the connection due to
	  the condition of one stream.

2 December 2025: Wouter
	- Fix to remove http2 stream mesh state when mesh new request is
	  dropping the new request.

1 December 2025: Wouter